The PBC pairing-based cryptography library. See COPYING for license.

Ben Lynn

Changes between PBC version 0.5.6 and 0.5.5

* Projective coordinates for A1 pairings. Contributed by Zhang Ye.
* Bugfix for affine coordinates for A pairings. Contributed by Zhang Ye.
* Optionally suppress error messages. Based on code by Geremy Condra.

Changes between PBC version 0.5.5 and 0.5.4

* Fixed bug reported by Zhang Ye: comparisons with the identity element in the
  input groups was broken.
* Fixed bug reported by Mario Di Raimondo: comparisons in G2 for some pairing
  types were broken. (Different representatives of the same coset are now
  considered equal.)

Changes between PBC version 0.5.4 and 0.5.3

* Accessors for coordinates of points and coefficients of polynomials.

Changes between PBC version 0.5.3 and 0.5.2

* Revamped pairing-based calculator.

Changes between PBC version 0.5.2 and 0.5.1

* Fixed pbc_param_set_str().
* Add DLL to Windows release.

Changes between PBC version 0.5.1 and 0.5.0

* Fixed pbc_param_t parsing bugs, and added error detection.
* Increased buffer size in pbc_demo_pairing_init() so the sample parameters
  actually work.

== New in PBC 0.5.0 ==

The largest changes involve pairing initialization and pairing parameters.

For pairing initialization, supply a buffer containing pairing parameters
instead of a `FILE *` stream. For example, rather than:

  pairing_init_inp_str(pairing, stdin);

write something like:

  char s[1024];
  size_t count = fread(s, 1, 1024, stdin);
  if (!count) pbc_die("input error");
  if (pairing_init_set_buf(pairing, s, count)) pbc_die("pairing init failed");

For file reads, personally I like to use mmap() which suits
pairing_init_set_buf().

The `pbc_param_t` data type for pairing parameters replaces `a_param_t`, ...,
`g_param_t`. Having the same data type for all pairing parameter types
simplifies the library, though some functions had to be changed slightly.
